--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,31 @@
 # Project-wide Gradle settings.
+# This file contains global settings for the Gradle build system, which applies to all modules in the project.
+
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
-android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+# These settings can be adjusted in the IDE for convenience, and changes here won't impact those.
 
+# For more details on how to configure your build environment visit
+# Link to the Gradle user guide for in-depth information: http://www.gradle.org/docs/current/userguide/build_environment.html
+
+# Specifies the JVM arguments used for the daemon process.
+# 'org.gradle.jvmargs' is used to set the maximum memory allocation for the Gradle daemon.
+org.gradle.jvmargs=-Xmx1536m  # Allocates a maximum of 1536 MB of memory for the JVM.
+
+# When configured, Gradle will run in incubating parallel mode.
+# Parallel mode speeds up builds by running tasks in parallel.
+# This should be used cautiously with decoupled projects to avoid dependency conflicts.
+# For more details, visit:
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# Uncomment the next line to enable parallel mode:
+# org.gradle.parallel=true
+
+# AndroidX package structure clarifies which packages are included in the Android OS versus those bundled with the app.
+# AndroidX is the improved, refactored version of the Android Support Library.
+# More details: https://developer.android.com/topic/libraries/support-library/androidx-rn
+android.useAndroidX=true  # Enables the use of AndroidX libraries in the project.
+
+# Automatically convert third-party libraries to use AndroidX.
+# This is required if your project uses libraries that depend on the old support library system.
+android.enableJetifier=true  # Jetifier rewrites old support library references to their AndroidX equivalents.
